fixed z-index to make content interactable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,7 @@ nav{
 	border-style: solid;
 	border-color: #cccccc;
 	border-width: 0 0 3px 0;
+	z-index: 1;
 }
 
 hr.hidden{
@@ -92,7 +93,7 @@ hr.hidden{
 	margin-bottom: 40px;
 	width: 90%;
 	padding-bottom: 40px;
-	z-index: -1;
+	z-index: 0;
 }
 
 p{
@@ -156,6 +157,7 @@ footer{
 	border-style: solid;
 	border-color: #4aaaa5;
 	width: 100%;
+	z-index: 1;
 }
 
 nav > a{
